# bears-app-based-workflow

./: .gitattributes  .gitignore  .mcp.json  AGENTS.md  BUILD  CHANGELOG.md  CLAUDE.md  README.md  SPEC.md  THIRD_PARTY_NOTICES  dagger.json  hooks.json  install  pants.toml  pyproject.toml  requirements.md
.claude-plugin/: marketplace.json  plugin.json
.codex/: config.toml
.codex-plugin/: plugin.json
agents/: README.md  (+134 more)
agents.disabled/: README.disabled.md  bears-android-emulator-platform-engineer.toml.disabled  bears-app-functional-graph-orchestrator.toml.disabled  bears-auth-platform-engineer.toml.disabled  bears-clarification-architect.toml.disabled  bears-codex-daemon-engineer.toml.disabled  bears-codex-health-engineer.toml.disabled  bears-codex-workspace-config-engineer.toml.disabled  bears-deploy-platform-engineer.toml.disabled  bears-deprecated-git-remote-hygiene-engineer.toml.disabled  bears-development-workflow-orchestrator.toml.disabled  bears-docs-maintainer.toml.disabled  bears-gateway-domain-orchestrator.toml.disabled  bears-github-branch-protection-settings-governor.toml.disabled  bears-goal-prompt-generator.toml.disabled  bears-infra-domain-orchestrator.toml.disabled  bears-infrastructure-network-engineer.toml.disabled  bears-kubernetes-data-platform-engineer.toml.disabled  bears-machine-first-execution-kernel-engineer.toml.disabled  bears-notifications-platform-engineer.toml.disabled  bears-ops-runbook-engineer.toml.disabled  bears-payments-domain-orchestrator.toml.disabled  bears-payments-platform-engineer.toml.disabled  bears-platform-security-reviewer.toml.disabled  bears-plugin-update-engineer.toml.disabled  bears-product-app-zone-engineer.toml.disabled  (+20 more)
(+1322 files in other folders)
