[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bears-codex-workflow-plugin"
version = "0.1.0"
description = "Bears workspace governance overlay for Spec Kit, roles, workflow, blockers, and deploy gates."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML",
]

[project.scripts]
knowledge-orchestrator = "knowledge_orchestrator.cli:main"

[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

addopts = "--strict-markers"
markers = [
  "fast: commit and pull request required fast checks",
  "integration: nightly or explicit pre-main checks",
  "slow: scheduled or operator-triggered checks only",
]
