[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "bears-plugin"
version = "0.1.0"
description = "Bears workspace governance plugin for roles, workflow, blockers, deploy gates, contracts, validators, hooks, and policy."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp",
  "PyYAML",
]


[project.optional-dependencies]
dev = [
  "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["bears_workflow*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

addopts = "--strict-markers"
markers = [
  "fast: commit and pull request required fast checks",
  "integration: nightly or explicit pre-main checks",
  "slow: scheduled or operator-triggered checks only",
]
